# gcc

./: Makefile.def  Makefile.in  README.en.md  README.md  configure  configure.ac  libtool.m4
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md  commit_message
bolt-plugin/: Makefile  Makefile.am  Makefile.in  aclocal.m4  bolt-plugin.cc  config.h.in  configure  configure.ac
gcc/: ChangeLog  ChangeLog-2024  Makefile.in  ai-optimizer.cc  ai4c-common.h  ai4c-infer.cc  ai4c-infer.h  attribs.cc  attribs.h  auto-profile.c  auto-profile.cc  auto-profile.h  builtins.c  builtins.cc  builtins.def  calls.cc  ccmp.c  ccmp.cc  ccmp.h  cfgbuild.cc  cfgbuild.h  cfgexpand.cc  cfghooks.c  cfghooks.cc  cfgloop.h  cgraph.c  cgraph.cc  cgraph.h  cgraphunit.cc  collect2.c  collect2.cc  combine.c  common.opt  config.gcc  config.host  config.in  configure  configure.ac  coverage.cc  coverage.h  (+198 more)
gcc/ada/gcc-interface/: decl.cc  gigi.h  misc.cc  utils.cc
gcc/c/: c-decl.cc  c-objc-common.h  c-parser.cc  c-tree.h  c-typeck.cc
gcc/c-family/: c-attribs.cc  c-common.h  c-opts.c  c-opts.cc  c-pretty-print.cc  c-pretty-print.h  c.opt
gcc/config/: darwin.h
gcc/config/aarch64/: aarch64-builtins.c  aarch64-builtins.cc  aarch64-c.cc  aarch64-cores.def  aarch64-cost-tables.h  (+36 more)
gcc/cp/: cp-objcp-common.h  cp-tree.h  decl.cc  error.cc  tree.cc
gcc/d/: d-attribs.cc  d-lang.cc  d-tree.h
gcc/doc/: cppopts.texi  extend.texi  install.texi  invoke.texi  md.texi  sourcebuild.texi  tm.texi  tm.texi.in
gcc/fortran/: f95-lang.cc  options.c  options.cc  scanner.c  scanner.cc
gcc/go/: go-lang.cc
gcc/ipa-struct-reorg/: escapes.def  ipa-struct-reorg.c  ipa-struct-reorg.cc  ipa-struct-reorg.h
gcc/lto/: lto-lang.cc
libcc1/: configure  configure.ac
libcpp/: init.cc  macro.cc
libcpp/include/: cpplib.h
libgcc/: configure  libgcov-util.c
libgomp/: Makefile.am  Makefile.in  configure  configure.ac  configure.tgt
libiberty/: Makefile.in
libquadmath/: Makefile.am  Makefile.in  configure  configure.ac  quadmath.h
libsanitizer/sanitizer_common/: sanitizer_platform_limits_posix.cpp
lto-plugin/: lto-plugin.c
(+567 files in other folders)
